--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;600;700&display=swap" rel="stylesheet">
   </head>
+  <header>
+    <div class="logo">
+        <img alt="Colmar Academy logo" src="capstone_colmar_assets/images/ic-logo.svg">
+        <p class="colmar">COLMAR</p>
+        <p class="academy">ACADEMY</p>
+    </div>
+    <div class="nav">
+        <p>On campus</p>
+        <p>Online</p>
+        <p>For companies</p>
+        <p>Sign in</p>
+    </div>
+  </header>
+
   <body>
 	
   </body>
