--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
         <p>Sign in</p>
     </div>
   </header>
-
   <body>
-	
+	<div class="banner">
+        <img alt="students learning" src="capstone_colmar_assets/images/banner.jpg">
+        <div class="content">
+        <h2>Learn something new everyday</h2>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <div class="button">
+            <p>Start here</p>
+        </div>
+        </div>
+    </div>
   </body>
 </html>
