--- a/index.html
+++ b/index.html
@@ -73,6 +73,46 @@
             </div>
         </div>
     </div>
-
+    <div class="course-section">
+      <h2>Start learning</h2>  
+      <div class="courses">
+      <div class="course">
+        <img src="capstone_colmar_assets/images/course-software.jpg">
+        <h4>Software engineering</h4>
+        <p>COURSES</p>
+        <p>Web Development, Mobile Development, iOT, APIs</p>
+      </div>
+      <div class="course">
+        <img src="capstone_colmar_assets/images/course-computer-art.jpg">
+        <h4>Computer art</h4>
+        <p>COURSES</p>
+        <p>Imaging & Design, web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+      </div>
+      <div class="course">
+        <img src="capstone_colmar_assets/images/course-design.jpg">
+        <h4>Design</h4>
+        <p>COURSES</p>
+        <p>User Experience Design, User Research, Visual Design</p>
+      </div>
+      <div class="course">
+        <img src="capstone_colmar_assets/images/course-data.jpg">
+        <h4>Data</h4>
+        <p>COURSES</p>
+        <p>Data Science, Big Data, SQL, Data Visualization</p>
+      </div>
+      <div class="course">
+        <img src="capstone_colmar_assets/images/course-business.jpg">
+        <h4>Business</h4>
+        <p>COURSES</p>
+        <p>Product Development, Business Development, Startup</p>
+      </div>
+      <div class="course">
+        <img src="capstone_colmar_assets/images/course-marketing.jpg">
+        <h4>Marketing</h4>
+        <p>COURSES</p>
+        <p>Analytics, Content Marketing, Mobile Marketing</p>
+      </div>
+    </div>
+    </div>
   </body>
 </html>
